feat: add tax rate to products and update related components